--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Web page #1</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css"
   </head>
   <body>
     <h1>My first web page</h1>
@@ -17,4 +17,4 @@
       <li>And a lot more!</li>
     </ul>
   </body>
-</html>    
+</html>
